# xero-mcp

./: .env.example  .gitignore  README.md  __main__.py  analytics_server.py  claude_desktop_config.json  config_manager.py  llms-full.txt  pyproject.toml  sdk-example.py  sync_server.py  xero_app.py
context/: accounts.md  bank-transactions.md  contacts.md  payments.md
xero_mcp/: __init__.py  app.py  auth_success.html  cli.py
