[project]
name = "xero-mcp"
version = "0.1.6"
description = "Xero MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.11.11",
    "fastmcp>=0.4.1",
    "python-dotenv>=1.0.1",
    "xero-python>=1.25.0",
    "authlib>=1.3.0",
    "requests>=2.32.3",
    "click>=8.1.8",
]

[tool.setuptools]
packages = ["xero_mcp"]
# Add this section to include non-Python files
package-data = { "xero_mcp" = ["*.html"] }


[project.scripts]
xero-mcp = "xero_mcp.cli:run"

[tool.fastmcp]
dependencies = [
    "aiohttp",
    "httpx",
    "python-dotenv",
    "pydantic",
    "xero-python",
    "authlib"
]
